_sass/_layout.scss
/**
 * Page content
 */
main {
    padding: $spacing-unit 0;
    & > header {
        font-size: (22/$base-font-size)*1em;
        border-bottom: 1px solid $grey-color-light;
        padding: 0 0 1em;
        @extend %clearfix;
        h2 {
            float: left;
        }
        p {
            font-weight: 500;
        }
    }
}

section, article {
    * + & {
        margin-top: 1.4em;
    }
}


/**
 * Footer
 */
footer {
    padding: 0 0 $spacing-unit;
    hr {
        margin: 0 0 $spacing-unit;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    position: relative;
    @extend %clearfix;
    &.wide {
        max-width: (1280/$base-font-size)*1em;
    }
}

